1.5.0
- Added: Stats to main page
- Changed: Now the app will load fully but checks if the user is authenticated
- Fixed: Issue with server entry duplication

1.4.0
- Added: Welcome/Landing page
- Added: Bot Stats

1.3.2
- Fixed: Multiple Server Settings (for server owners) not updating the correct setting

1.3.1
- Fix: for multiple server settings in server owner panel

1.3.0
- Sizing & Style updates
- Notifications can now be added dynamically without needing to reload list
- Server (Guild owner) settings panel added

1.2.0
- Ability to filter Channels for permissions
- Request added: sorted channels alphabetically