@@ -371,7 +371,7 @@ small *,
     }
   }
   &.small {
-    min-height: 25%;
+    min-height: 20%;
     .title {
       padding: 75px 0 10px;
       font-size: 2.8em;
