@@ -1,5 +1,6 @@
 1.5.0
 - Added: Stats to main page
+- Added: Ability to delete permissions to have them rebuilt
 - Changed: Now the app will load fully but checks if the user is authenticated
 - Fixed: Issue with server entry duplication
 
